# grr_ros2_robot

./: .gitignore  README.md
isaac/: examplo_with_other_wheel.usd  interactive.py
isaac/omni.isaac.examplo_bot/config/: extension.toml
isaac/omni.isaac.examplo_bot/docs/: CHANGELOG.md  README.md
isaac/omni.isaac.examplo_bot/omni/isaac/examplo_bot/base_sample/: __init__.py  base_sample_extension.py
isaac/omni.isaac.examplo_bot/omni/isaac/examplo_bot/import_bot/: __init__.py  import_bot.py  import_bot_extension.py
src/mecanum_controller/: CMakeLists.txt  mecanum_plugin.xml  package.xml
src/mecanum_controller/include/mecanum_controller/: mecanum_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
src/mecanum_controller/src/: mecanum_controller.cpp  odometry.cpp  speed_limiter.cpp
src/mecanum_controller/test/: test_accumulator.cpp  test_load_mecanum_controller.cpp  test_mecanum_controller.cpp
src/mecanum_controller/test/config/: test_mecanum_controller.yaml
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: publish_joint_command.py
src/robot_description/: CMakeLists.txt  examplo.urdf  package.xml
src/robot_description/config/: controllers.yaml  diff_drive_controller.yml  isaac.rviz  view.rviz
src/robot_description/launch/: gazebo.launch.py  isaac.launch.py  joy.launch.py  rviz.launch.py  rviz_gui.launch.py
src/robot_description/meshes/: base_link.stl  brain.stl  bridge.stl  bridge_latch.stl  chassis.stl  color_sensor.stl  left_front_wheel_1.stl  left_rear_wheel_1.stl  measurements.txt  mec_hub_1.stl  mec_hub_2.stl  mecanum_1.stl  mecanum_2.stl  mechanum_roller.stl  meshes.stl  right_front_wheel_1.stl  right_rear_wheel_1.stl  rolle2r.stl  roller.stl  small_package_grabber_roller.stl  small_package_grabber_tube.stl  small_package_sweeper.stl  small_package_sweeper_roller.stl
src/robot_description/urdf/: examplo.urdf  robot.control  robot.gazebo  robot.trans  robot.xacro
src/robot_description/urdf/control/: drive.urdf.xacro  drive.xacro
src/robot_description/urdf/mechanical/: chassis.urdf.xacro  mecanum_with_rollers.urdf.xacro  wheel_angled_left.urdf.xacro  wheel_angled_right.urdf.xacro
src/robot_description/urdf/parts/: bridge.xacro  chassis.xacro  lidar.xacro  mecanum_roller.xacro  mecanum_wheel.xacro  small_package_grabber.xacro  small_package_sweeper.xacro  zed_cam.xacro
src/robot_description/urdf/robots/: examplo.urdf.xacro  examplo_properties.urdf.xacro  robot.urdf
src/robot_description/urdf/robots/robot/: robot.usd
src/robot_description/urdf/util/: materials.xacro
src/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
src/robot_hardware/include/robot_hardware/: isaac_drive.hpp
src/robot_hardware/src/: isaac_drive.cpp
